[package]
name = "sonictunes"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
libmpv2 = "5.0.1"
log = "0.4.28"
rand = "0.9.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.145"
simplelog = "0.12.2"
souvlaki = "0.8.3"
