[package]
name = "sonictunes"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
crossbeam = "0.8.4"
libmpv2 = "5.0.1"
log = { version = "0.4.28", features = ["std"] }
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.145"
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }

[target.'cfg(windows)'.dependencies]
windows-async = "0.2.1"
